# bundles

./: CHANGELOG.md  LICENSE  README.md  bundles.cabal
.github/workflows/: ci.yml
src/: Bundles.hs  Bundling.hs  Examples.hs  HList.hs  Scratch.hs
src/Bundling/: Assemble.hs  Bundle.hs  BundlingSetup.hs  Factory.hs  RepMap.hs  Setup.hs  TypeMap.hs  TypeSet.hs
src/Bundling/Constraints/: All.hs
src/Bundling/Setup/: PopNextReadyFactories.hs  PopNextReadyFactory.hs
src/Bundling2/: Bundle.hs  DynBag.hs  Exports.hs  Some.hs
test/: Bundling2Spec.hs  BundlingSpec.hs  Main.hs  Spec.hs
